--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,16 @@
             <artifactId>pdfua</artifactId>
             <version>9.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.10.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.jai-imageio</groupId>
+            <artifactId>jai-imageio-jpeg2000</artifactId>
+            <version>1.4.0</version>
+        </dependency>
     </dependencies>
     
     <build>
