--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Build output
 target/
+dist/
 
 # Generated files
 *.pdf
@@ -10,7 +11,31 @@ target/
 .classpath
 .project
 .settings/
+.vscode/
 
 # OS files
 .DS_Store
 Thumbs.db
+
+# Dependencies
+node_modules/
+
+# Yarn
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
+.pnp.*
+
+# Logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Environment variables
+.env
+.env.local
+.env.*.local
